update: Add docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-db.url=
-db.user=
-db.password=
-jwt.secret=
-jwt.expiration=
+db.url=${DB_URL}
+db.user=${DB_USER}
+db.password=${DB_PASSWORD}
+
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
