--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   app:
     build: .
     container_name: easyaccess_app
+    restart: always
     ports:
       - "8080:8080"
     environment:
